// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row centered renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      center
    </div>
  </div>
</section>
`;

exports[`Row fullsize renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: inherit;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      fullsize
    </div>
  </div>
</section>
`;

exports[`Row only one item left renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > * {
    grid-column: 1;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      leftOnly
    </div>
  </div>
</section>
`;

exports[`Row only one item right renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > * {
    grid-column: 2;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      rightOnly
    </div>
  </div>
</section>
`;

exports[`Row renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Default
    </div>
  </div>
</section>
`;

exports[`Row with big item left renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-column: 1 / -6;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      bigLeft
    </div>
  </div>
</section>
`;

exports[`Row with big item right renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-column: 6 / -1;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      bigRight
    </div>
  </div>
</section>
`;

exports[`Row with one item down left renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > *:first-child {
    margin-top: 11vw;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      leftDown
    </div>
    <div
      class="c2"
    >
      leftDown
    </div>
  </div>
</section>
`;

exports[`Row with one item down right renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 > *:last-child {
    margin-top: 11vw;
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      rightDown
    </div>
    <div
      class="c2"
    >
      rightDown
    </div>
  </div>
</section>
`;

exports[`Row with two equal sized items aligned to center renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      center
    </div>
    <div
      class="c3"
    >
      center
    </div>
  </div>
</section>
`;

exports[`Row with two equal sized items aligned to end renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      end
    </div>
    <div
      class="c3"
    >
      end
    </div>
  </div>
</section>
`;

exports[`Row with two equal sized items aligned to start renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      start
    </div>
    <div
      class="c3"
    >
      start
    </div>
  </div>
</section>
`;

exports[`Row with two equal sized items renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 5.55vw;
  grid-template-columns: 1fr;
  justify-items: center;
  grid-column: 1 / -1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media (min-width:768px) {
  .c1 {
    grid-column: 2 / -2;
  }
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      start
    </div>
    <div
      class="c3"
    >
      start
    </div>
  </div>
</section>
`;

exports[`Row with variable amount of items aligned to center renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      variable (Center)
    </div>
    <div
      class="c3"
    >
      variable (Center)
    </div>
    <div
      class="c2"
    >
      variable (Center)
    </div>
  </div>
</section>
`;

exports[`Row with variable amount of items aligned to end renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      variable (End)
    </div>
    <div
      class="c2"
    >
      variable (End)
    </div>
    <div
      class="c3"
    >
      variable (End)
    </div>
  </div>
</section>
`;

exports[`Row with variable amount of items aligned to start renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      variable (Start)
    </div>
    <div
      class="c3"
    >
      variable (Start)
    </div>
    <div
      class="c3"
    >
      variable (Start)
    </div>
  </div>
</section>
`;

exports[`Row with variable amount of items renders correctly 1`] = `
.c0 {
  background-color: var(--colorForegroundFeather);
  border-color: green;
  border-style: dotted;
  border-width: 1px;
  width: 100%;
  margin-bottom: clamp(2.488rem,5.32vw,2.986rem);
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(18,1fr);
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: clamp(2.488rem,5.32vw,2.986rem);
  grid-column: 1 / -1;
  grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(25,25,25,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<section
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      variable (Start)
    </div>
    <div
      class="c3"
    >
      variable (Start)
    </div>
    <div
      class="c3"
    >
      variable (Start)
    </div>
  </div>
</section>
`;
